# rna-sequence

./: .gitignore  .pre-commit-config.yaml  Dockerfile.fastqc  Makefile  README.md  pyproject.toml  setup.cfg
config/: fastqc.yaml
containers/: Dockerfile.bowtie2  Dockerfile.fadu  Dockerfile.fastp  Dockerfile.pydeseq2  Dockerfile.samtools  Dockerfile.subread  Dockerfile.umitools  fadu.jl
rna_sequence/: __init__.py  assets.py  jobs.py
scripts/: bowtie2.py  fadu.py  fastp.py  fastqc.py  pydeseq2.py  samtools.py  subread.py  umitools.py
